# bun_nextjs_rust

./: .env.example  .gitignore  README.md  package.json
backend/api/: Cargo.toml  README.md  diesel.toml  test_api.py
backend/api/migrations/2025-08-28-080551_create_todos/: up.sql
backend/api/src/: main.rs  models.rs  schema.rs
web/client/: package.json
web/client/src/app/: page.tsx
